Minor nav change

--- a/protected/modules/dashboard/assets/css/dashboard.css
+++ b/protected/modules/dashboard/assets/css/dashboard.css
@@ -1433,6 +1433,10 @@ aside.navigation.active footer a {
     -o-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
 }
+
+aside.navigation footer span.icon-align-justify {
+    display: none !important;
+}
 main .post {
 	color: #2D2D29;
 	padding: 10px;
