--- a/protected/modules/dashboard/assets/css/src/cards.css
+++ b/protected/modules/dashboard/assets/css/src/cards.css
@@ -165,8 +165,8 @@ main .widget-container .settings {
 }
 
 main .widget-container div.card-rectangle {
-    width: 482px; 
-    height:  230px;
+    width: 482px !important; 
+    height:  230px !important;
 }
 
 main .widget-container div.card-normal {
@@ -174,8 +174,8 @@ main .widget-container div.card-normal {
 }
 
 main .widget-container div.card-huge {
-    width: 482px; 
-    height: 482px;
+    width: 482px !important; 
+    height: 482px !important;
 }
 
 main .widget-container div.card-huge .body {
