--- a/protected/modules/dashboard/assets/css/dashboard.css
+++ b/protected/modules/dashboard/assets/css/dashboard.css
@@ -494,6 +494,10 @@ main .content-container .editor #main .content {
 	max-height: 98%;
 }
 
+main .content-container .editor .redactor_box {
+	min-height: 500px;
+}
+
 main .content-container .body-content {
 	overflow: hidden;
 	height: 90%;
