--- a/protected/modules/dashboard/assets/css/dashboard.css
+++ b/protected/modules/dashboard/assets/css/dashboard.css
@@ -939,6 +939,7 @@ input[type="range"]::-ms-fill-lower {
 .icon-spinner-form {
   margin-left: -7px;
 }
+
 /* ------------------------------------------
 CSS TOGGLE SWITCHES (Ionuț Colceriu)
 Licensed under Unlicense 
@@ -2271,4 +2272,10 @@ main .empty {
 	position: relative;
 	top: 20px;
 	left: 20px;
+}
+
+
+.icon-spinner-form2 {
+  margin-right: 7px !important;
+  margin-left: -7px !important;
 }
