--- a/protected/modules/dashboard/assets/css/src/settings.css
+++ b/protected/modules/dashboard/assets/css/src/settings.css
@@ -416,3 +416,9 @@ main .empty {
 	top: 20px;
 	left: 20px;
 }
+
+
+.icon-spinner-form2 {
+  margin-right: 7px !important;
+  margin-left: -7px !important;
+}
